[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/Interfaz.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Interfaz.tres" type="DynamicFont" id=2]
[ext_resource path="res://Pantallas/PanelInventario.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 32, 32, 32, 32 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.476563, 0.476563, 0.476563, 1 )
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.360784, 0.360784, 0.360784, 1 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0
anti_aliasing = false

[sub_resource type="Theme" id=7]
PopupMenu/styles/hover = SubResource( 8 )
PopupMenu/styles/panel = SubResource( 9 )

[node name="PanelInventario" type="Panel"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icono" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 3.0
margin_right = -2.0
margin_bottom = -1.0
rect_min_size = Vector2( 12, 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cantidad" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 16, 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="MenuButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
align = 2
items = [ "Usar", null, 0, false, false, 0, 0, null, "", false, "Soltar", null, 0, false, false, 1, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_PanelInventario_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_PanelSlot_mouse_entered"]
[connection signal="mouse_entered" from="PopupMenu" to="." method="_on_PopupMenu_mouse_entered"]
